--- a/nginx_api/conf.d/default.conf
+++ b/nginx_api/conf.d/default.conf
@@ -3,10 +3,17 @@ upstream backend{
 }
 
 server {
-  listen      80;
-  server_name localhost;
+  # listen      80;
+  # server_name localhost;
+  server_name s-wedding-invitation.com;
+  listen      80 default_server;
+  listen      [::]:80 default_server;
   root        /usr/share/nginx/;
   index       top.html top.html;
+
+  location /.well-known/acme-challenge/ {
+    root /usr/share/nginx/;
+  }
 
   location / {
     if ($request_uri ~ ^/(.*)\.html$) {
