--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./nginx_api/log:/var/log/nginx
       - ./nginx_api/conf.d:/etc/nginx/conf.d
+      - ./etc/letsencrypt:/etc/letsencrypt
       - ./frontend:/usr/share/nginx
     networks:
       - nginx_network
@@ -28,6 +29,12 @@ services:
     networks:
       - nginx_network
       - shared_network
+  certbot:
+    image: certbot/certbot:v1.7.0
+    volumes:
+      - ./etc/letsencrypt:/etc/letsencrypt
+      - ./frontend:/usr/share/nginx
+    command: ["--version"]
 #   db:
 #     image: postgres:14
 #     container_name: postgres_db
