--- a/nginx_api/conf.d/default.conf
+++ b/nginx_api/conf.d/default.conf
@@ -8,8 +8,8 @@ server {
   server_name s-wedding-invitation.com;
   listen      80 default_server;
   listen      [::]:80 default_server;
-  root        /usr/share/nginx/;
-  index       top.html top.html;
+  # root        /usr/share/nginx/;
+  # index       top.html top.html;
 
   location /.well-known/acme-challenge/ {
     root /usr/share/nginx/;
@@ -61,6 +61,9 @@ server {
   root        /usr/share/nginx/;
 
   location / {
+    proxy_set_header Host              $host;
+    proxy_set_header X-Forwarded-Host  $host;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     if ($request_uri ~ ^/(.*)\.html$) {
         return 302 /$1;
     }
@@ -72,7 +75,7 @@ server {
 
   location /api/ {
     client_max_body_size 40M;
-    proxy_pass https://backend/;
+    proxy_pass http://backend/;
   }
 
   error_page  500 502 503 504 /50x.html;
