--- a/nginx_api/conf.d/default.conf
+++ b/nginx_api/conf.d/default.conf
@@ -59,6 +59,7 @@ server {
   add_header  Strict-Transport-Security "max-age=2592000" always;
 
   root        /usr/share/nginx/;
+  index       top.html top.html;
 
   location / {
     proxy_set_header Host              $host;
