変更の修正

--- a/nginx_api/conf.d/default.conf
+++ b/nginx_api/conf.d/default.conf
@@ -4,22 +4,67 @@ upstream backend{
 
 server {
   # listen      80;
-  server_name localhost;
-  # server_name s-wedding-invitation.com;
+  # server_name localhost;
+  server_name s-wedding-invitation.com;
   listen      80 default_server;
   listen      [::]:80 default_server;
+  # root        /usr/share/nginx/;
+  # index       top.html top.html;
+
+  location /.well-known/acme-challenge/ {
+    root /usr/share/nginx/;
+  }
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+
+  # location / {
+  #   if ($request_uri ~ ^/(.*)\.html$) {
+  #       return 302 /$1;
+  #   }
+  #   try_files $uri $uri.html $uri/ =404;
+  #   proxy_read_timeout 15;
+  #   proxy_connect_timeout 15;
+  #   proxy_send_timeout 15; 
+  # }
+
+  # location /api/ {
+  #   client_max_body_size 40M;
+  #   proxy_pass http://backend/;
+  # }
+
+  # error_page  500 502 503 504 /50x.html;
+  # location = 50x.html {
+  #   root  /usr/share/nginx/html;
+  # }
+}
+
+server {
+  server_name   s-wedding-invitation.com;
+
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+
+  ssl_certificate      /etc/letsencrypt/live/s-wedding-invitation.com/fullchain.pem;
+  ssl_certificate_key  /etc/letsencrypt/live/s-wedding-invitation.com/privkey.pem;
+  ssl_session_timeout 1d;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off;
+
+  ssl_protocols TLSv1.3 TLSv1.2;
+  ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-GCM-SHA256';
+  ssl_prefer_server_ciphers off;
+
+  add_header  Strict-Transport-Security "max-age=2592000" always;
+
   root        /usr/share/nginx/;
   index       top.html top.html;
 
-  # location /.well-known/acme-challenge/ {
-  #   root /usr/share/nginx/;
-  # }
-
-  # location / {
-  #   return 301 https://$host$request_uri;
-  # }
-
   location / {
+    proxy_set_header Host              $host;
+    proxy_set_header X-Forwarded-Host  $host;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     if ($request_uri ~ ^/(.*)\.html$) {
         return 302 /$1;
     }
@@ -39,48 +84,3 @@ server {
     root  /usr/share/nginx/html;
   }
 }
-
-# server {
-#   server_name   s-wedding-invitation.com;
-
-#   listen 443 ssl http2;
-#   listen [::]:443 ssl http2;
-
-#   ssl_certificate      /etc/letsencrypt/live/s-wedding-invitation.com/fullchain.pem;
-#   ssl_certificate_key  /etc/letsencrypt/live/s-wedding-invitation.com/privkey.pem;
-#   ssl_session_timeout 1d;
-#   ssl_session_cache shared:SSL:10m;
-#   ssl_session_tickets off;
-
-#   ssl_protocols TLSv1.3 TLSv1.2;
-#   ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-GCM-SHA256';
-#   ssl_prefer_server_ciphers off;
-
-#   add_header  Strict-Transport-Security "max-age=2592000" always;
-
-#   root        /usr/share/nginx/;
-#   index       top.html top.html;
-
-#   location / {
-#     proxy_set_header Host              $host;
-#     proxy_set_header X-Forwarded-Host  $host;
-#     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-#     if ($request_uri ~ ^/(.*)\.html$) {
-#         return 302 /$1;
-#     }
-#     try_files $uri $uri.html $uri/ =404;
-#     proxy_read_timeout 15;
-#     proxy_connect_timeout 15;
-#     proxy_send_timeout 15; 
-#   }
-
-#   location /api/ {
-#     client_max_body_size 40M;
-#     proxy_pass http://backend/;
-#   }
-
-#   error_page  500 502 503 504 /50x.html;
-#   location = 50x.html {
-#     root  /usr/share/nginx/html;
-#   }
-# }
